--- a/Details.css
+++ b/Details.css
@@ -7,7 +7,7 @@
 .left-content {
     flex: 70%;
     overflow-y: auto;
-    max-height: 80vh; /* Adjust as needed */
+    max-height: 80vh; 
     padding-right: 20px;
 }
 
@@ -23,4 +23,27 @@
     width: 100%;
     border-radius: 10px;
     margin-bottom: 20px;
+}
+
+.event-details {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.ticket-pricing {
+    text-align: center;
+}
+
+.price-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
